--- a/index.html
+++ b/index.html
@@ -95,6 +95,6 @@
     </table>
         <hr size="3" noshade>
         <a href="Hobbies.html">My Hobbies</a>
-        <a href="contact-me.html">Contact Me</a>
+        <a href="Contact-me.html">Contact Me</a>
 </body>
 </html>
